--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <meta name="description" content="">
     </head>
     <body>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p>Hello world!</p>
     </body>
 </html>
