--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <title>Francesco Casula Ltd</title>
-        <meta name="description" content="">
-    </head>
-    <body>
-        <p>Hello world!</p>
-    </body>
-</html>
+# Francesco Casula Ltd
+
+Work in progress
